Fix #peaks to fit for menu not showing up on phone after a ROI-defined peak fit.

--- a/InterSpec_resources/InterSpecMobileCommon.css
+++ b/InterSpec_resources/InterSpecMobileCommon.css
@@ -229,6 +229,7 @@ table.RecalibCoefTable
   height: 100%;
   width: 220px;
   overflow-y: auto;
+  display: block; /* overide .Wt-popupmenu */
 }
 
 .PopupDivMenuPhone.Root
